# devforge

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  agent.py  api.py  config.py  main.py  pyproject.toml
.github/workflows/: code-quality.yml  security.yml
docs/: index.html  overview.md  schemas.md
fixtures/: ticket_1.json
policies/: rules.yaml
src/: agent_loop.py  code_generator.py  github_client.py  llm_client.py  policy_checker.py  repo_context.py  ticket_reader.py  validator.py
