[project]
name = "devforge"
version = "0.1.0"
description = "AI-Augmented Delivery Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "gitpython>=3.1.50",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pygithub>=2.9.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.48.0",
]
